tests/fixtures/invalid/bytes_mul_str.py
# Cannot multiply Bytes and Str
x: bytes = b"hello" * "hello"
